<resources>
    <string name="app_name">RoomDatabaseApp</string>
    <string name="cars_app_student_name">Cars App (Student Name)</string>
    <string name="maker">Maker</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="color">Color</string>
    <string name="seats">Seats</string>
    <string name="price">Price</string>
    <string name="MAKER_KEY">MAKER_KEY</string>
    <string name="MODEL_KEY">MODEL_KEY</string>
    <string name="YEAR_KEY">YEAR_KEY</string>
    <string name="COLOR_KEY">COLOR_KEY</string>
    <string name="SEATS_KEY">SEATS_KEY</string>
    <string name="PRICE_KEY">PRICE_KEY</string>
    <string name="NON_VIEW_KEY">NON_VIEW_DATA_KEY</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="add_car">Add Car</string>
    <string name="clear_fields">Clear Fields</string>
    <string name="remove_last_car">Remove Last Car</string>
    <string name="remove_all_cars">Remove All Cars</string>
    <string name="add_car_fab_desc">Add Car</string>
    <string name="list_cars">List Cars</string>

</resources>